# SolanaClient

./: CMakeLists.txt  main.cpp
include/: account.h  base58.h  solana.h
src/: base58.cpp  solana.cpp
